array implementation fixes and decremental validation and getting past results after traversing the array

--- a/src/app/components/route-a/route-a.component.html
+++ b/src/app/components/route-a/route-a.component.html
@@ -12,7 +12,7 @@
                 <tbody>
                     <tr>
                         <td *ngFor="let price of prices; let i = index">
-                            <input type="number" [(ngModel)]="prices[i]" min="0" class="form-control" />
+                            <input type="number" [(ngModel)]="tablePrices[i]" min="0" class="form-control" />
                         </td>
                     </tr>
                 </tbody>
