Recieved comment's updates

--- a/src/app/components/route-a/route-a.component.html
+++ b/src/app/components/route-a/route-a.component.html
@@ -6,13 +6,13 @@
             <table class="table">
                 <thead>
                     <tr>
-                        <th *ngFor="let day of daysOfWeek">{{ day }}</th>
+                        <th *ngFor="let day of resultProfitService.getDaysOfWeek()">{{ day }}</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
                         <td *ngFor="let price of prices; let i = index">
-                            <input type="number" [(ngModel)]="tablePrices[i]" min="0" class="form-control" />
+                            <input type="number" [(ngModel)]="prices[i]" min="0" class="form-control" />
                         </td>
                     </tr>
                 </tbody>
